The sitewide language setting is now read from group "site" and key "Language" instead of the previous group "eZCalendarMain" and key "Language". Backwards compatability is retained.

--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/site.ini
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/site.ini
@@ -21,6 +21,7 @@ SiteDesign=standard
 SiteStyle=ezpublish
 SiteTitle=eZ Systems
 Keywords=eZpublish
+Language=en_GB
 
 # Meta content variable
 SiteAuthor=eZ Systems
@@ -56,7 +57,7 @@ SiteCache=disabled
 # How long before a cache times out, in minutes
 SiteCacheTimeout=60
 
-# Charssets for admin that can be used to display different languages
+# Charsets for admin that can be used to display different languages
 # You can leave this value blank to disble this option
 CharsetSwitch=disabled
 Charsets=en_GB-English;en_UC-Unicode;no_NO-Norwegian;ru_RU-Russian;lv_LV-Latvian;
