*** empty log message ***

--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/site.ini
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/site.ini
@@ -42,7 +42,7 @@ Password=publish
 MySQLSocket=disabled
 
 # can be e.g. /article/view/42 or disabled
-DefaultPage=disabled
+DefaultPage=/article/frontpage/1/
 LogFile=error.log
 EnabledModules=eZArticle;eZTrade;eZForum;eZLink;eZPoll;eZAd;eZNewsfeed;eZBug;eZContact;eZTodo;eZCalendar;eZFileManager;eZImageCatalogue;eZMediaCatalogue;eZAddress;eZForm;eZBulkMail;eZMessage;eZQuiz;eZStats;eZURLTranslator;eZSiteManager;eZUser
 CacheHeaders=true
