expiry time, warning time

--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/ezcontact/admin/intl/en_GB/projecttype.php.ini
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/ezcontact/admin/intl/en_GB/projecttype.php.ini
@@ -3,6 +3,9 @@ list_headline=Project types
 view_headline=Show project type
 edit_headline=Edit project type
 name=Name
+expiry=Expiry time
+warning=Warning time before expiry
+days=days
 delete=Delete the project type?
 delete_selected=Delete selected project types
 no_item=No project types has been defined
