Added ranking to categories, added extra category and categories to category objects.

--- a/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezarticle/admin/intl/en_GB/articleedit.php.ini
+++ b/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezarticle/admin/intl/en_GB/articleedit.php.ini
@@ -48,3 +48,4 @@ link_url=Link text URL
 article_urltranslator=URL translation
 article_url=Article URL
 article_nourl=Url not defined at this time
+ranking=Ranking
