--- a/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezarticle/admin/intl/en_GB/categoryedit.php.ini
+++ b/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezarticle/admin/intl/en_GB/categoryedit.php.ini
@@ -28,3 +28,7 @@ browse=Browse imagecatalogue
 editor_group=Editor group
 do_not_use_editor=Do not use editor
 modification_date=Modification date
+ranking_asc=Ranking ascending
+ranking_desc=Ranking descending
+category=Category
+additional_category=Additional categories
