Added redirect on n-th login site.ini settings and db addition.

--- a/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/publish_dist/site.ini
+++ b/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/publish_dist/site.ini
@@ -16,10 +16,10 @@
 [site]
 SiteURL=ez.no
 AdminSiteURL=admin.ez.no
-UserSiteURL=ez.no
+UserSiteURL=publish_dist.pkej.dvh1.ez.no
 SiteDesign=standard
 SiteStyle=ezpublish
-SiteTitle=eZ Systems
+SiteTitle=One World
 Keywords=eZpublish
 Language=en_GB
 
@@ -33,16 +33,16 @@ HelpLanguage=en_GB
 SiteTmpDir=/tmp/
 
 # Database settings set DatabaseImplementation to mysql|postgresql|informix..
-DatabaseImplementation=mysql
+DatabaseImplementation=postgresql
 Server=localhost
-Database=publish
-User=publish
-Password=publish
+Database=oneworld-pkej
+User=oneworld-pkej
+Password=oneworld-pkej
 # If you need to specify the socket to use with mysql use this variable
 MySQLSocket=disabled
 
 # can be e.g. /article/view/42 or disabled
-DefaultPage=/article/frontpage/1/
+DefaultPage=/article/articleview/1/1/1
 LogFile=error.log
 EnabledModules=eZArticle;eZTrade;eZForum;eZLink;eZPoll;eZAd;eZNewsfeed;eZBug;eZContact;eZTodo;eZCalendar;eZFileManager;eZImageCatalogue;eZMediaCatalogue;eZAddress;eZForm;eZBulkMail;eZMessage;eZQuiz;eZStats;eZURLTranslator;eZSiteManager;eZUser
 CacheHeaders=true
@@ -154,6 +154,10 @@ CustomTags=logo
 
 # How often a word should be present to be ignored 0-1 (1==100%)
 StopWordFrequency=0.7
+
+# Rating settings
+RankingMin=0
+RankingMax=20
 
 [eZBugMain]
 AdminTemplateDir=templates/standard/
@@ -559,6 +563,11 @@ ReminderMailFromAddress=nospam@ez.no
 RequireAddress=disabled
 RequireFirstAddress=disabled
 OverrideUserWithAddress=disabled
+RedirectOnLoginCount=12
+
+# Use either an http://somewhere.com/ url or an
+# ezpublish url for example /article/articleview/1/1/1/
+OnLoginCountRedirectTo=http://ez.no/
 
 [eZXMLRPC]
 UserIndex=/index.php
