Added a lot: 	Yahoo publishing of articles 	Extra URLs in articles

--- a/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezarticle/admin/intl/en_GB/articleedit.php.ini
+++ b/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezarticle/admin/intl/en_GB/articleedit.php.ini
@@ -49,3 +49,5 @@ article_urltranslator=URL translation
 article_url=Article URL
 article_nourl=Url not defined at this time
 ranking=Ranking
+polls=Poll
+link_url=Link URL
