--- a/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezarticle/user/intl/en_GB/menubox.php.ini
+++ b/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezarticle/user/intl/en_GB/menubox.php.ini
@@ -1,6 +1,6 @@
 [strings]
 title=Articles
-latest=Latest
+latest=Latest by category
 authors=Authors
 index=Index
 archive=Archive
@@ -8,4 +8,4 @@ submit_article=Submit Article
 categories=Categories
 site_map=Site map
 front_page=Front page
-
+all_latest=All latest
