--- a/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezpoll/user/intl/en_US/result.php.ini
+++ b/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezpoll/user/intl/en_US/result.php.ini
@@ -7,3 +7,4 @@ more=More polls
 no_result=The results are hidden until the poll is closed.
 votes=votes
 total_votes=No. of votes
+return_to_article=Return to article
