Added moving of articles to other categories when stop date is reached. (Can be used to move an article to an "archive (or several)" from the original categories.

--- a/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezarticle/admin/intl/en_GB/categoryedit.php.ini
+++ b/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezarticle/admin/intl/en_GB/categoryedit.php.ini
@@ -30,5 +30,6 @@ do_not_use_editor=Do not use editor
 modification_date=Modification date
 ranking_asc=Ranking ascending
 ranking_desc=Ranking descending
-category=Category
-additional_category=Additional categories
+category=Expires to Category
+additional_category=Expires to Additional categories
+categorynone=--- Select ---
