--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/site.ini
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/site.ini
@@ -140,6 +140,7 @@ AdminURLTranslator=disabled
 # Ability to use XML tags inside the category description, administrator have a possibility
 # to format category description. This switch must be set before category creation. If you
 # change this switch after some content created, YOU WILL LOOSE CATEGORIES !!!
+# This feature is not currently supported in eZ publish desktop edition.
 CategoryDescriptionXML=disabled
 
 # if the article view should show the path of the categorydefinition even if linked from 
