Added GUI for visible in lists setting.

--- a/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezarticle/admin/intl/en_GB/categoryedit.php.ini
+++ b/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezarticle/admin/intl/en_GB/categoryedit.php.ini
@@ -33,3 +33,4 @@ ranking_desc=Ranking descending
 category=Expires to Category
 additional_category=Expires to Additional categories
 categorynone=--- Select ---
+visible_in_lists=Visible in Listings
