*** empty log message ***

--- a/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezcontact/admin/intl/en_GB/companyedit.php.ini
+++ b/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezcontact/admin/intl/en_GB/companyedit.php.ini
@@ -62,3 +62,8 @@ online_information=Addresses used on the Internet, this is usually web and email
 online_ignore_information=An online address is ignored if no type is selected and all fields are empty.
 project_information=The contact information is used for assigning a user or person as a contact person for the company. Use the "Contact groups" box to select a group you want to search in. Then enter a search text and press Search to get a new list with persons under Contactperson.
 project_status_information=Change the status by selecting a value from the Status box whenever the company relation changes.
+expires_before=Expires in
+expires_after=days
+warning_before=Warning message in
+warning_after=days
+approved=Approved 
