--- a/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezcontact/admin/intl/en_GB/companytype.php.ini
+++ b/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezcontact/admin/intl/en_GB/companytype.php.ini
@@ -42,3 +42,5 @@ delete_person=Delete company/category
 views=Views
 next=Next
 previous=Previous
+expires=Company is expiring
+not_approved=Company is not approved
