Updated ezaddress with a new class eZ language.

--- a/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezaddress/admin/intl/en_GB/menubox.php.ini
+++ b/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/ezaddress/admin/intl/en_GB/menubox.php.ini
@@ -6,5 +6,6 @@ onlinetypelist=Online type list
 phonetypeadd=New telephone type
 phonetypelist=Telephone type list
 countrylist=Country list
+languagelist=Language list
 newcountry=New country
 module_name=address
