--- a/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/publish_dist/site.ini
+++ b/contribution/versions/ezpublish2/branches/oneworld_branch/projects/php/publish_dist/site.ini
@@ -44,7 +44,7 @@ MySQLSocket=disabled
 # can be e.g. /article/view/42 or disabled
 DefaultPage=/article/articleview/1/1/1
 LogFile=error.log
-EnabledModules=eZArticle;eZTrade;eZForum;eZLink;eZPoll;eZAd;eZNewsfeed;eZBug;eZContact;eZTodo;eZCalendar;eZFileManager;eZImageCatalogue;eZMediaCatalogue;eZAddress;eZForm;eZBulkMail;eZMessage;eZQuiz;eZStats;eZURLTranslator;eZSiteManager;eZUser
+EnabledModules=eZArticle;eZTrade;eZForum;eZLink;eZPoll;eZAd;eZNewsfeed;eZBug;eZContact;eZTodo;eZCalendar;eZFileManager;eZImageCatalogue;eZMediaCatalogue;eZAddress;eZForm;eZBulkMail;eZMessage;eZQuiz;eZStats;eZURLTranslator;eZSiteManager;eZUser;ezjob
 CacheHeaders=true
 CheckDependence=enabled
 ModuleTab=enabled
@@ -322,6 +322,12 @@ DefaultSection=2
 # enabled = use normal header/footer; disabled = use print header/footer
 SlideShowHeaderFooter=disabled
 SlideShowOriginalImage=disabled
+
+[eZJobMain]
+AdminTemplateDir=templates/standard/
+TemplateDir=templates/standard/
+ImageDir=/images/standard/
+Language=en_GB
 
 
 [eZLinkMain]
