Added better userlogic to the forgot password page

--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/ezuser/user/intl/en_GB/forgotmessage.php.ini
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/ezuser/user/intl/en_GB/forgotmessage.php.ini
@@ -11,6 +11,5 @@ user_not_exists=The user does not exist
 generated_password_text=Your new password 
 generated_password=Your new password has been generated and sent to your e-mail address
 generated_password_2=Your new password has been generated and sent to your e-mail address
-generated_password_3=Login with your user name and your new password, then go to your user page
-generated_password_4=and change the generated password to something which is easier to remember for you
-change_user_info=Change user info here
+generated_password_3=with your user name and your new password, then go to your user page and change the generated password to something which is easier to remember for you.
+login=Login
