--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/ezform/admin/intl/en_GB/reportsetup.php.ini
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/ezform/admin/intl/en_GB/reportsetup.php.ini
@@ -18,7 +18,7 @@ median=Median
 25percentile=25 percentil
 75percentile=75 percentil
 cross_reference=Cross reference
-graphical_representation=Grafisk fremstilling
+graphical_representation=Graphical representation
 min25median75max=Min - 25% - Median - 75% - Max
 list=List
 override_text=Override text
