--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/ezarticle/user/intl/no_NO/mailtofriend.php.ini
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/ezarticle/user/intl/no_NO/mailtofriend.php.ini
@@ -16,3 +16,4 @@ mail_send_to=Denne mailen er sendt til deg fra noen som har lest den på
 mail_from=meldingen kom fra
 the_users_comment=Avsenderen hadde disse kommentarene til artikkelen
 url=url
+back=Tilbake
