added setting for site.ini

--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/site.ini
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/site.ini
@@ -229,7 +229,7 @@ ShowCompanyContact=true
 ShowCompanyStatus=true
 DefaultSection=2
 ShowAllConsultations=disabled
-
+ShowRelatedConsultations=enabled
 
 [eZErrorMain]
 AdminTemplateDir=templates/standard/
